[project]
name = "editai"
version = "0.1.0"
description = "A Python CLI tool for editing and improving Markdown documentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diskcache>=5.6.3",
    "instructor>=1.7.9",
    "litellm>=1.67.2",
    "loguru>=0.7.3",
    "smolcrawl>=0.1.7",
    "spacy>=3.8.5",
    "typer>=0.15.2",
    "pyyaml>=6.0.1",
    "dspy>=2.6.23",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "responses>=0.22.0",
]

[project.scripts]
editai = "editai.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.pyright]
venvPath = "."
venv='.venv'

[dependency-groups]
dev = [
    "jupyterlab>=4.4.2",
]
